# smats

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  CPPLINT.cfg  MODULE.bazel  README.md
.github/workflows/: docs.yml  myapp.yml  smats.yml
docs/: BUILD.bazel
docs/_static/: header.html
myapp/: BUILD.bazel  main.cpp
myapp/util/: BUILD.bazel  calculator.cpp  calculator.h
scripts/: valgrind.sh
smats/: BUILD.bazel  main.cpp  smats.h
smats/lib/: BUILD.bazel  gmp.cpp  gmp.h
smats/symbolic/: BUILD.bazel  environment.cpp  environment.h  expression.cpp  expression.h  expression_cell.cpp  expression_cell.h  expression_evaluator.cpp  expression_evaluator.h  expression_factory.cpp  expression_factory.h  expression_kind.cpp  expression_kind.h  expression_visitor.cpp  expression_visitor.h  formula_visitor.h  if_then_else_eliminator.cpp  if_then_else_eliminator.h  linear_expression.h  linear_formula_flattener.cpp  linear_formula_flattener.h  literal.cpp  literal.h  naive_cnfizer.cpp  naive_cnfizer.h  nnfizer.cpp  nnfizer.h  plaisted_greenbaum_cnfizer.cpp  plaisted_greenbaum_cnfizer.h  predicate_abstractor.cpp  predicate_abstractor.h  prefix_printer.cpp  prefix_printer.h  symbolic.cpp  symbolic.h  symbolic_util.cpp  symbolic_util.h  tseitin_cnfizer.cpp  tseitin_cnfizer.h  variable.cpp  (+3 more)
smats/util/: BUILD.bazel  concepts.h  definitions.h  error.h  exception.h  fmt_ostream.h  hash.hpp  logging.cpp  logging.h  stats.cpp  stats.h  timer.cpp  timer.h  visitor.cpp  visitor.h
tests/: BUILD.bazel
tests/symbolic/: BUILD.bazel  tes_if_then_else_eliminator.cpp  test_environment.cpp  test_expression.cpp  test_expression_cell.cpp  test_expression_cell_expansion.cpp  test_expression_factory.cpp  test_expression_kind.cpp  test_nnfizer.cpp  test_plaisted_greenbaum_cnfizer.cpp  test_predicate_abstractor.cpp  test_prefix_printer.cpp  test_symbolic.cpp  test_tseitin_cnfizer.cpp  test_variable.cpp  test_variables.cpp
tests/util/: BUILD.bazel  TestCalculator.cpp  TestHash.cpp  TestLogging.cpp  TestTimer.cpp  test_error.cpp  test_exception.cpp  test_hash.cpp  test_logging.cpp  test_timer.cpp
tools/: BUILD.bazel  cpplint.bzl  dwyu.bzl  dwyu_ignore_includes.json  generate_version_header.bat  generate_version_header.sh  iwyu_mappings.imp  rules_cc.bzl  workspace_status.bat
