load("//tools:rules_cc.bzl", "smats_cc_googletest")

smats_cc_googletest(
    name = "test_logging",
    tags = ["util"],
    deps = ["//smats/util:logging"],
)

smats_cc_googletest(
    name = "test_exception",
    tags = ["util"],
    deps = ["//smats/util:exception"],
)

smats_cc_googletest(
    name = "test_timer",
    tags = ["util"],
    deps = ["//smats/util:timer"],
)

smats_cc_googletest(
    name = "test_hash",
    tags = ["util"],
    deps = ["//smats/util:hash"],
)
